Enhance HTML parser & update README
- Add support for parsing HTML Documents using `Document.parseHTML()`
- Add function to parse just a single HTML Element
- Add support in HTML parser for working with arrays and `NodeList`s,
etc
- Update README

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
         "no-prototype-builtins": 0
     },
     "globals": {
-      "globalThis": "readonly"
+      "globalThis": "readonly",
+      "MathMLElement": "readonly"
     }
 }
 
