--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "rollup": "^4.13.1"
   },
   "dependencies": {
-    "@aegisjsproject/sanitizer": "^0.1.2"
+    "@aegisjsproject/sanitizer": "^0.1.2",
+    "@aegisjsproject/url": "^1.0.0"
   }
 }
