--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aegisjsproject/parsers",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "A collection of secure & minimal parsers for HTML, CSS, SVG, MathML, XML, and JSON",
   "keywords": [
     "aegis",
@@ -88,6 +88,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@shgysk8zer0/eslint-config": "^1.0.1",
     "@shgysk8zer0/http-server": "^1.1.1",
+    "@shgysk8zer0/importmap": "^1.7.5",
     "eslint": "^9.0.0",
     "rollup": "^4.13.1"
   },
